[package]
name = "bench_minplus_convolutions"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.10.1"
rand = "0.8.4"

[dev-dependencies]
criterion = "0.3.5"

[[bench]]
name = "main"
harness = false
